Adjust code & tests